# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
Include/SA/Render/LowLevel/DX12/: D12Factory.hpp  D12ResourceInitializer.hpp  DX12API.hpp
Include/SA/Render/LowLevel/Vulkan/: VkDevice.hpp  VkInstance.hpp  VkResourceInitializer.hpp  VkShader.hpp  VulkanAPI.hpp
Include/SA/Render/RHI/: RHID12RenderInterface.hpp  RHID12ResourceInitializer.hpp  RHIRenderInterface.hpp  RHIResourceInitializer.hpp  RHIVkRenderInterface.hpp  RHIVkResourceInitializer.hpp
Include/SA/Render/RHI/Buffer/: RHIBuffer.hpp  RHIBufferUsage.hpp  RHID12Buffer.hpp  RHIVkBuffer.hpp
Include/SA/Render/RHI/Compatibility/: IWindowInterface.hpp  Window.hpp  WindowInterface.hpp
Include/SA/Render/RHI/Context/: RHIContext.hpp  RHID12Context.hpp  RHIVkContext.hpp
Include/SA/Render/RHI/DX12/: RHID12RenderInterface.hpp  RHID12ResourceInitializer.hpp
Include/SA/Render/RHI/Device/: RHID12Device.hpp  RHID12DeviceInfo.hpp  RHIDevice.hpp  RHIDeviceInfo.hpp  RHIDeviceRequirements.hpp  RHIVkDevice.hpp  RHIVkDeviceInfo.hpp
Include/SA/Render/RHI/Mesh/: RHID12StaticMesh.hpp  RHIStaticMesh.hpp  RHIVkStaticMesh.hpp
Include/SA/Render/RHI/Misc/: Format.hpp  RHIFormat.hpp  RHISampling.hpp
Include/SA/Render/RHI/Pass/: RHIAttachmentInfo.hpp  RHID12FrameBuffer.hpp  RHID12Pass.hpp  RHID12RenderPass.hpp  RHIFrameBuffer.hpp  RHIPass.hpp  RHIRenderPass.hpp  RHIRenderPassInfo.hpp  RHIVkFrameBuffer.hpp  RHIVkPass.hpp  RHIVkRenderPass.hpp
Include/SA/Render/RHI/Pipeline/: RHID12Pipeline.hpp  RHID12PipelineLayout.hpp  RHID12RenderViews.hpp  RHIPipeline.hpp  RHIPipelineLayout.hpp  RHIRenderViews.hpp  RHIVkPipeline.hpp  RHIVkPipelineLayout.hpp  RHIVkRenderViews.hpp
Include/SA/Render/RHI/Shader/: RHID12Shader.hpp  RHIShader.hpp  RHIVkShader.hpp
Include/SA/Render/RHI/Surface/: RHID12Swapchain.hpp  RHID12WindowSurface.hpp  RHISwapchain.hpp  RHISwapchainSettings.hpp  RHIVkSwapchain.hpp  RHIVkWindowSurface.hpp  RHIWindowSurface.hpp
Include/SA/Render/RHI/Texture/: RHID12Cubemap.hpp  RHID12Texture.hpp  RHITexture.hpp  RHITextureDescriptor.hpp  RHITextureUsage.hpp  RHIVkCubemap.hpp  RHIVkTexture.hpp
Include/SA/Render/RHI/Vulkan/: RHIVkRenderInterface.hpp  RHIVkResourceInitializer.hpp
Include/SA/Render/Renderer/: DeferredRenderer.hpp  ForwardRenderer.hpp  Renderer.hpp  RendererSettings.hpp
Include/SA/Render/Renderer/Base/: Renderer.hpp  RendererSettings.hpp  SceneTextures.hpp
Include/SA/Render/Renderer/Deferred/: DeferredRenderer.hpp  DeferredSceneTextures.hpp
Include/SA/Render/Renderer/Forward/: ForwardRenderer.hpp  ForwardSceneTextures.hpp
Include/SA/Render/ShaderCompiler/: DXCAPI.hpp  Exception_DXC.hpp  ShaderCompilInfo.hpp  ShaderCompileInfo.hpp  ShaderCompileResult.hpp  ShaderCompiler.hpp  ShaderIncluder.hpp
Include/SA/Render/Wrappers/Base/: RawShader.hpp
Include/SA/Render/Wrappers/DX12/: D12Factory.hpp
Include/SA/Render/Wrappers/Vulkan/: VkInstance.hpp  VkShader.hpp
Resources/Passes/: Deferred.json  Forward.json
Resources/Shaders/Common/: Camera.hlsl  Config.hlsl  Depth.hlsl  Frame.hlsl  NormalMapping.hlsl  Object.hlsl  Preprocessors.hlsl  VertexAssembly.hlsl  VertexFactory.hlsl
Resources/Shaders/Common/Lighting/: DirectionalLight.hlsl  Illumination.hlsl  Lighting.hlsl  PointLight.hlsl  SpotLight.hlsl
Resources/Shaders/Common/Material/: AO.hlsl  Albedo.hlsl  MaterialBase.hlsl  Metallic.hlsl  NormalMap.hlsl  PBRMaterial.hlsl  Roughness.hlsl
Resources/Shaders/Common/Misc/: AABB.hlsl  ClearUAV.hlsl
Resources/Shaders/Deferred/: GBuffer.hlsl
Resources/Shaders/Forward/: Lit.hlsl  Unlit.hlsl  unlit.hlsl
Resources/Shaders/Passes/: DepthOnly.hlsl  HelloTriangle.hlsl  MainPass.hlsl
Resources/Shaders/Passes/LightCulling/: BuildActiveLightClusterList.hlsl  BuildLightClusterGrid.hlsl  ClearCulledLightGrid.hlsl  ComputeActiveLightClusters.hlsl  ComputeLightClusterGrid.hlsl  ComputePointLightCulling.hlsl  LightClusterCommon.hlsl
Source/SA/Render/LowLevel/Common/: RawShader.cpp
Source/SA/Render/LowLevel/DX12/: D12Factory.cpp  D12ResourceInitializer.cpp
Source/SA/Render/LowLevel/Vulkan/: VkDevice.cpp  VkInstance.cpp  VkResourceInitializer.cpp  VkShader.cpp
Source/SA/Render/RHI/: RHID12RenderInterface.cpp  RHID12ResourceInitializer.cpp  RHIRenderInterface.cpp  RHIResourceInitializer.cpp  RHIVkRenderInterface.cpp  RHIVkResourceInitializer.cpp
Source/SA/Render/RHI/Buffer/: RHIBuffer.cpp  RHIBufferUsage.cpp  RHID12Buffer.cpp  RHIVkBuffer.cpp
Source/SA/Render/RHI/Common/: RHIResourceInitializer.cpp
Source/SA/Render/RHI/Context/: RHIContext.cpp  RHID12Context.cpp  RHIVkContext.cpp
Source/SA/Render/RHI/DX12/: RHID12RenderInterface.cpp  RHID12ResourceInitializer.cpp
Source/SA/Render/RHI/Device/: RHID12Device.cpp  RHID12DeviceInfo.cpp  RHIDevice.cpp  RHIDeviceInfo.cpp  RHIVkDevice.cpp  RHIVkDeviceInfo.cpp
Source/SA/Render/RHI/Mesh/: RHID12StaticMesh.cpp  RHIStaticMesh.cpp  RHIVkStaticMesh.cpp
Source/SA/Render/RHI/Misc/: Format.cpp  RHID12Sampling.cpp  RHIFormat.cpp  RHIVkSampling.cpp
Source/SA/Render/RHI/Pass/: RHIAttachmentInfo.cpp  RHIAttachmentLoadMode.cpp  RHID12FrameBuffer.cpp  RHID12Pass.cpp  RHID12RenderPass.cpp  RHIFrameBuffer.cpp  RHIPass.cpp  RHIVkFrameBuffer.cpp  RHIVkPass.cpp  RHIVkRenderPass.cpp
Source/SA/Render/RHI/Pipeline/: RHID12Pipeline.cpp  RHID12PipelineLayout.cpp  RHID12RenderViews.cpp  RHIPipelineLayout.cpp  RHIRenderViews.cpp  RHIVkPipeline.cpp  RHIVkPipelineLayout.cpp  RHIVkRenderViews.cpp
Source/SA/Render/RHI/Shader/: RHID12Shader.cpp  RHIShader.cpp  RHIVkShader.cpp
Source/SA/Render/RHI/Surface/: RHID12Swapchain.cpp  (+6 more)
Source/SA/Render/Renderer/: DeferredRenderer.cpp  ForwardRenderer.cpp  Renderer.cpp
Source/SA/Render/ShaderCompiler/: Exception_DXC.cpp  SPIRV-ReflectAPI.hpp  ShaderCompiler.cpp  ShaderIncluder.cpp  ShaderIncluder.hpp
Tests/: CMakeLists.txt
Tests/Prototype/: CMakeLists.txt  main.cpp
Tests/Prototype_DX12/: CMakeLists.txt  main.cpp
Tests/Prototype_OGL/: CMakeLists.txt  main.cpp
Tests/Prototype_VK/: CMakeLists.txt  main.cpp
(+498 files in other folders)
